fix: make active formation plane Java 8 compatible